[WN] add code to demonstrate replay issue

--- a/issue-repro/build.gradle
+++ b/issue-repro/build.gradle
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
+    // lottie 6.2.0
+//    implementation "com.airbnb.android:lottie:6.2.0"
     implementation project(':lottie')
     implementation libs.androidx.appcompat
 }
